# The autoKNOXSS started three months ago on Debian, editor gedit.

### [08-10-2023]

--> Add User-Agent tool to cURL request

### [10-21-2023]

-> Add regex base64 value Flash Mode (GET and POST)

-> Add new regex value Flash Mode (GET and POST)

### [09-07-2023]

-> Rename tool

### [08-22-2023]

-> Change Colors Pallet - TPUT command

-> Removed circumflex accent from case options 

### [08-20-2023]

-> Fix Colors Pallet

### [08-06-2023]

-> Add counters

### [07-31-2023]

-> Fix menu

### [06-2023]

-> v2.0 

-> Every feature has become a function.